--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,11 @@
         "storage",
         "activeTab",
         "scripting"
+    ],
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "css": ["styles.css"]
+        }
     ]
 }
