--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,7 @@
     "permissions": [
         "action",
         "storage",
-        "activeTab",
-        "scripting"
+        "activeTab"
     ],
     "content_scripts": [
         {
